samples/cloudformation/OpsWorksVPCELB.template
{
	"AWSTemplateFormatVersion": "2010-09-09",
	"Description": "AWS CloudFormation Sample Template OpsWorksVPCELB: Launches OpsWorks stack, layer, instances and associated resources to run a PHP application. The application runs inside an Amazon VPC and uses ELB to load balance ** This template creates one or more Amazon EC2 instances. You will be billed for the AWS resources used if you create a stack from this template.",
	"Mappings": {
		"SubnetConfig": {
			"VPC": {
				"CIDR": "10.0.0.0/16"
			},
			"Public": {
				"CIDR": "10.0.0.0/24"
			},
			"Private": {
				"CIDR": "10.0.1.0/24"
			}
		},
		"AWSInstanceType2Arch": {
			"t1.micro": {
				"Arch": "PV64"
			},
			"t2.nano": {
				"Arch": "HVM64"
			},
			"t2.micro": {
				"Arch": "HVM64"
			},
			"t2.small": {
				"Arch": "HVM64"
			},
			"t2.medium": {
				"Arch": "HVM64"
			},
			"t2.large": {
				"Arch": "HVM64"
			},
			"m1.small": {
				"Arch": "PV64"
			},
			"m1.medium": {
				"Arch": "PV64"
			},
			"m1.large": {
				"Arch": "PV64"
			},
			"m1.xlarge": {
				"Arch": "PV64"
			},
			"m2.xlarge": {
				"Arch": "PV64"
			},
			"m2.2xlarge": {
				"Arch": "PV64"
			},
			"m2.4xlarge": {
				"Arch": "PV64"
			},
			"m3.medium": {
				"Arch": "HVM64"
			},
			"m3.large": {
				"Arch": "HVM64"
			},
			"m3.xlarge": {
				"Arch": "HVM64"
			},
			"m3.2xlarge": {
				"Arch": "HVM64"
			},
			"m4.large": {
				"Arch": "HVM64"
			},
			"m4.xlarge": {
				"Arch": "HVM64"
			},
			"m4.2xlarge": {
				"Arch": "HVM64"
			},
			"m4.4xlarge": {
				"Arch": "HVM64"
			},
			"m4.10xlarge": {
				"Arch": "HVM64"
			},
			"c1.medium": {
				"Arch": "PV64"
			},
			"c1.xlarge": {
				"Arch": "PV64"
			},
			"c3.large": {
				"Arch": "HVM64"
			},
			"c3.xlarge": {
				"Arch": "HVM64"
			},
			"c3.2xlarge": {
				"Arch": "HVM64"
			},
			"c3.4xlarge": {
				"Arch": "HVM64"
			},
			"c3.8xlarge": {
				"Arch": "HVM64"
			},
			"c4.large": {
				"Arch": "HVM64"
			},
			"c4.xlarge": {
				"Arch": "HVM64"
			},
			"c4.2xlarge": {
				"Arch": "HVM64"
			},
			"c4.4xlarge": {
				"Arch": "HVM64"
			},
			"c4.8xlarge": {
				"Arch": "HVM64"
			},
			"g2.2xlarge": {
				"Arch": "HVMG2"
			},
			"g2.8xlarge": {
				"Arch": "HVMG2"
			},
			"r3.large": {
				"Arch": "HVM64"
			},
			"r3.xlarge": {
				"Arch": "HVM64"
			},
			"r3.2xlarge": {
				"Arch": "HVM64"
			},
			"r3.4xlarge": {
				"Arch": "HVM64"
			},
			"r3.8xlarge": {
				"Arch": "HVM64"
			},
			"i2.xlarge": {
				"Arch": "HVM64"
			},
			"i2.2xlarge": {
				"Arch": "HVM64"
			},
			"i2.4xlarge": {
				"Arch": "HVM64"
			},
			"i2.8xlarge": {
				"Arch": "HVM64"
			},
			"d2.xlarge": {
				"Arch": "HVM64"
			},
			"d2.2xlarge": {
				"Arch": "HVM64"
			},
			"d2.4xlarge": {
				"Arch": "HVM64"
			},
			"d2.8xlarge": {
				"Arch": "HVM64"
			},
			"hi1.4xlarge": {
				"Arch": "HVM64"
			},
			"hs1.8xlarge": {
				"Arch": "HVM64"
			},
			"cr1.8xlarge": {
				"Arch": "HVM64"
			},
			"cc2.8xlarge": {
				"Arch": "HVM64"
			}
		},
		"AWSInstanceType2NATArch": {
			"t1.micro": {
				"Arch": "NATPV64"
			},
			"t2.nano": {
				"Arch": "NATHVM64"
			},
			"t2.micro": {
				"Arch": "NATHVM64"
			},
			"t2.small": {
				"Arch": "NATHVM64"
			},
			"t2.medium": {
				"Arch": "NATHVM64"
			},
			"t2.large": {
				"Arch": "NATHVM64"
			},
			"m1.small": {
				"Arch": "NATPV64"
			},
			"m1.medium": {
				"Arch": "NATPV64"
			},
			"m1.large": {
				"Arch": "NATPV64"
			},
			"m1.xlarge": {
				"Arch": "NATPV64"
			},
			"m2.xlarge": {
				"Arch": "NATPV64"
			},
			"m2.2xlarge": {
				"Arch": "NATPV64"
			},
			"m2.4xlarge": {
				"Arch": "NATPV64"
			},
			"m3.medium": {
				"Arch": "NATHVM64"
			},
			"m3.large": {
				"Arch": "NATHVM64"
			},
			"m3.xlarge": {
				"Arch": "NATHVM64"
			},
			"m3.2xlarge": {
				"Arch": "NATHVM64"
			},
			"m4.large": {
				"Arch": "NATHVM64"
			},
			"m4.xlarge": {
				"Arch": "NATHVM64"
			},
			"m4.2xlarge": {
				"Arch": "NATHVM64"
			},
			"m4.4xlarge": {
				"Arch": "NATHVM64"
			},
			"m4.10xlarge": {
				"Arch": "NATHVM64"
			},
			"c1.medium": {
				"Arch": "NATPV64"
			},
			"c1.xlarge": {
				"Arch": "NATPV64"
			},
			"c3.large": {
				"Arch": "NATHVM64"
			},
			"c3.xlarge": {
				"Arch": "NATHVM64"
			},
			"c3.2xlarge": {
				"Arch": "NATHVM64"
			},
			"c3.4xlarge": {
				"Arch": "NATHVM64"
			},
			"c3.8xlarge": {
				"Arch": "NATHVM64"
			},
			"c4.large": {
				"Arch": "NATHVM64"
			},
			"c4.xlarge": {
				"Arch": "NATHVM64"
			},
			"c4.2xlarge": {
				"Arch": "NATHVM64"
			},
			"c4.4xlarge": {
				"Arch": "NATHVM64"
			},
			"c4.8xlarge": {
				"Arch": "NATHVM64"
			},
			"g2.2xlarge": {
				"Arch": "NATHVMG2"
			},
			"g2.8xlarge": {
				"Arch": "NATHVMG2"
			},
			"r3.large": {
				"Arch": "NATHVM64"
			},
			"r3.xlarge": {
				"Arch": "NATHVM64"
			},
			"r3.2xlarge": {
				"Arch": "NATHVM64"
			},
			"r3.4xlarge": {
				"Arch": "NATHVM64"
			},
			"r3.8xlarge": {
				"Arch": "NATHVM64"
			},
			"i2.xlarge": {
				"Arch": "NATHVM64"
			},
			"i2.2xlarge": {
				"Arch": "NATHVM64"
			},
			"i2.4xlarge": {
				"Arch": "NATHVM64"
			},
			"i2.8xlarge": {
				"Arch": "NATHVM64"
			},
			"d2.xlarge": {
				"Arch": "NATHVM64"
			},
			"d2.2xlarge": {
				"Arch": "NATHVM64"
			},
			"d2.4xlarge": {
				"Arch": "NATHVM64"
			},
			"d2.8xlarge": {
				"Arch": "NATHVM64"
			},
			"hi1.4xlarge": {
				"Arch": "NATHVM64"
			},
			"hs1.8xlarge": {
				"Arch": "NATHVM64"
			},
			"cr1.8xlarge": {
				"Arch": "NATHVM64"
			},
			"cc2.8xlarge": {
				"Arch": "NATHVM64"
			}
		},
		"AWSRegionArch2AMI": {
			"us-east-1": {
				"PV64": "ami-5fb8c835",
				"HVM64": "ami-60b6c60a",
				"HVMG2": "ami-e998ea83"
			},
			"us-west-2": {
				"PV64": "ami-d93622b8",
				"HVM64": "ami-f0091d91",
				"HVMG2": "ami-315f4850"
			},
			"us-west-1": {
				"PV64": "ami-56ea8636",
				"HVM64": "ami-d5ea86b5",
				"HVMG2": "ami-943956f4"
			},
			"eu-west-1": {
				"PV64": "ami-95e33ce6",
				"HVM64": "ami-bff32ccc",
				"HVMG2": "ami-83fd23f0"
			},
			"eu-central-1": {
				"PV64": "ami-794a5915",
				"HVM64": "ami-bc5b48d0",
				"HVMG2": "ami-ba1a09d6"
			},
			"ap-northeast-1": {
				"PV64": "ami-393c1957",
				"HVM64": "ami-383c1956",
				"HVMG2": "ami-08e5c166"
			},
			"ap-northeast-2": {
				"PV64": "NOT_SUPPORTED",
				"HVM64": "ami-249b554a",
				"HVMG2": "NOT_SUPPORTED"
			},
			"ap-southeast-1": {
				"PV64": "ami-34bd7a57",
				"HVM64": "ami-c9b572aa",
				"HVMG2": "ami-5a15d239"
			},
			"ap-southeast-2": {
				"PV64": "ami-ced887ad",
				"HVM64": "ami-48d38c2b",
				"HVMG2": "ami-0c1a446f"
			},
			"sa-east-1": {
				"PV64": "ami-7d15ad11",
				"HVM64": "ami-6817af04",
				"HVMG2": "NOT_SUPPORTED"
			},
			"cn-north-1": {
				"PV64": "ami-18ac6575",
				"HVM64": "ami-43a36a2e",
				"HVMG2": "NOT_SUPPORTED"
			}
		},
		"AWSNATRegionArch2AMI": {
			"us-east-1": {
				"NATPV64": "ami-c02b04a8",
				"NATHVM64": "ami-68115b02"
			},
			"us-west-2": {
				"NATPV64": "ami-2dae821d",
				"NATHVM64": "ami-77a4b816"
			},
			"us-west-1": {
				"NATPV64": "ami-67a54423",
				"NATHVM64": "ami-ef1a718f"
			},
			"eu-west-1": {
				"NATPV64": "ami-cb7de3bc",
				"NATHVM64": "ami-c0993ab3"
			},
			"eu-central-1": {
				"NATPV64": "ami-3604392b",
				"NATHVM64": "ami-0b322e67"
			},
			"ap-northeast-1": {
				"NATPV64": "ami-c7e016c7",
				"NATHVM64": "ami-f885ae96"
			},
			"ap-northeast-2": {
				"NATPV64": "NOT_SUPPORTED",
				"NATHVM64": "ami-4118d72f"
			},
			"ap-southeast-1": {
				"NATPV64": "ami-b098a9e2",
				"NATHVM64": "ami-e2fc3f81"
			},
			"ap-southeast-2": {
				"NATPV64": "ami-0fed9d35",
				"NATHVM64": "ami-e3217a80"
			},
			"sa-east-1": {
				"NATPV64": "ami-93fb408e",
				"NATHVM64": "ami-8631b5ea"
			},
			"cn-north-1": {
				"NATPV64": "ami-bc3fad85",
				"NATHVM64": "ami-86468feb"
			}
		},
		"Region2Principal": {
			"us-east-1": {
				"EC2Principal": "ec2.amazonaws.com",
				"OpsWorksPrincipal": "opsworks.amazonaws.com"
			},
			"us-west-2": {
				"EC2Principal": "ec2.amazonaws.com",
				"OpsWorksPrincipal": "opsworks.amazonaws.com"
			},
			"us-west-1": {
				"EC2Principal": "ec2.amazonaws.com",
				"OpsWorksPrincipal": "opsworks.amazonaws.com"
			},
			"eu-west-1": {
				"EC2Principal": "ec2.amazonaws.com",
				"OpsWorksPrincipal": "opsworks.amazonaws.com"
			},
			"ap-southeast-1": {
				"EC2Principal": "ec2.amazonaws.com",
				"OpsWorksPrincipal": "opsworks.amazonaws.com"
			},
			"ap-northeast-1": {
				"EC2Principal": "ec2.amazonaws.com",
				"OpsWorksPrincipal": "opsworks.amazonaws.com"
			},
			"ap-northeast-2": {
				"EC2Principal": "ec2.amazonaws.com",
				"OpsWorksPrincipal": "opsworks.amazonaws.com"
			},
			"ap-southeast-2": {
				"EC2Principal": "ec2.amazonaws.com",
				"OpsWorksPrincipal": "opsworks.amazonaws.com"
			},
			"sa-east-1": {
				"EC2Principal": "ec2.amazonaws.com",
				"OpsWorksPrincipal": "opsworks.amazonaws.com"
			},
			"cn-north-1": {
				"EC2Principal": "ec2.amazonaws.com.cn",
				"OpsWorksPrincipal": "opsworks.amazonaws.com.cn"
			},
			"eu-central-1": {
				"EC2Principal": "ec2.amazonaws.com",
				"OpsWorksPrincipal": "opsworks.amazonaws.com"
			}
		}
	},
	"Resources": {
		"OpsWorksStack": {
			"Type": "AWS::OpsWorks::Stack",
			"Properties": {
				"Name": {
					"Ref": "AWS::StackName"
				},
				"ServiceRoleArn": {
					"Fn::GetAtt": [
						"OpsWorksServiceRole",
						"Arn"
					]
				},
				"DefaultInstanceProfileArn": {
					"Fn::GetAtt": [
						"OpsWorksInstanceProfile",
						"Arn"
					]
				},
				"VpcId": {
					"Ref": "VPC"
				},
				"DefaultSubnetId": {
					"Ref": "PrivateSubnet"
				}
			}
		},
		"OpsWorksLayer": {
			"Type": "AWS::OpsWorks::Layer",
			"Metadata": {
				"Comment": "OpsWorks instances require outbound Internet access. Using DependsOn to make sure outbound Internet Access is estlablished before creating instances in this layer."
			},
			"DependsOn": [
				"NATIPAddress",
				"PublicRoute",
				"PublicSubnetRouteTableAssociation",
				"PrivateRoute",
				"PrivateSubnetRouteTableAssociation",
				"OpsWorksApp"
			],
			"Properties": {
				"StackId": {
					"Ref": "OpsWorksStack"
				},
				"Name": "MyPHPApp",
				"Type": "php-app",
				"Shortname": "php-app",
				"EnableAutoHealing": "true",
				"AutoAssignElasticIps": "false",
				"AutoAssignPublicIps": "true",
				"CustomSecurityGroupIds": [
					{
						"Ref": "OpsWorksSecurityGroup"
					}
				]
			}
		},
		"OpsWorksInstance1": {
			"Type": "AWS::OpsWorks::Instance",
			"Properties": {
				"StackId": {
					"Ref": "OpsWorksStack"
				},
				"LayerIds": [
					{
						"Ref": "OpsWorksLayer"
					}
				],
				"InstanceType": "t2.small",
				"RootDeviceType": "ebs"
			}
		},
		"OpsWorksInstance2": {
			"Type": "AWS::OpsWorks::Instance",
			"Properties": {
				"StackId": {
					"Ref": "OpsWorksStack"
				},
				"LayerIds": [
					{
						"Ref": "OpsWorksLayer"
					}
				],
				"InstanceType": "t2.small",
				"RootDeviceType": "ebs"
			}
		},
		"OpsWorksApp": {
			"Type": "AWS::OpsWorks::App",
			"Properties": {
				"StackId": {
					"Ref": "OpsWorksStack"
				},
				"Name": "MyPHPApp",
				"Type": "php",
				"AppSource": {
					"Type": "git",
					"Url": "git://github.com/amazonwebservices/opsworks-demo-php-simple-app.git",
					"Revision": "version1"
				},
				"Attributes": {
					"DocumentRoot": " "
				}
			}
		},
		"OpsWorksServiceRole": {
			"Type": "AWS::IAM::Role",
			"Properties": {
				"AssumeRolePolicyDocument": {
					"Statement": [
						{
							"Effect": "Allow",
							"Principal": {
								"Service": [
									{
										"Fn::FindInMap": [
											"Region2Principal",
											{
												"Ref": "AWS::Region"
											},
											"OpsWorksPrincipal"
										]
									}
								]
							},
							"Action": [
								"sts:AssumeRole"
							]
						}
					]
				},
				"Path": "/",
				"Policies": [
					{
						"PolicyName": "opsworks-service",
						"PolicyDocument": {
							"Statement": [
								{
									"Effect": "Allow",
									"Action": [
										"ec2:*",
										"iam:PassRole",
										"cloudwatch:GetMetricStatistics",
										"elasticloadbalancing:*"
									],
									"Resource": "*"
								}
							]
						}
					}
				]
			}
		},
		"OpsWorksInstanceRole": {
			"Type": "AWS::IAM::Role",
			"Properties": {
				"AssumeRolePolicyDocument": {
					"Statement": [
						{
							"Effect": "Allow",
							"Principal": {
								"Service": [
									{
										"Fn::FindInMap": [
											"Region2Principal",
											{
												"Ref": "AWS::Region"
											},
											"EC2Principal"
										]
									}
								]
							},
							"Action": [
								"sts:AssumeRole"
							]
						}
					]
				},
				"Path": "/"
			}
		},
		"OpsWorksInstanceProfile": {
			"Type": "AWS::IAM::InstanceProfile",
			"Properties": {
				"Path": "/",
				"Roles": [
					{
						"Ref": "OpsWorksInstanceRole"
					}
				]
			}
		},
		"OpsWorksSecurityGroup": {
			"Type": "AWS::EC2::SecurityGroup",
			"Properties": {
				"GroupDescription": "Allow inbound requests from the ELB to the OpsWorks instances",
				"VpcId": {
					"Ref": "VPC"
				},
				"SecurityGroupIngress": [
					{
						"IpProtocol": "tcp",
						"FromPort": "80",
						"ToPort": "80",
						"SourceSecurityGroupId": {
							"Ref": "ELBSecurityGroup"
						}
					}
				]
			}
		},
		"ELB": {
			"Type": "AWS::ElasticLoadBalancing::LoadBalancer",
			"Properties": {
				"CrossZone": "true",
				"SecurityGroups": [
					{
						"Ref": "ELBSecurityGroup"
					}
				],
				"Subnets": [
					{
						"Ref": "PublicSubnet"
					}
				],
				"Listeners": [
					{
						"LoadBalancerPort": "80",
						"InstancePort": "80",
						"Protocol": "HTTP"
					}
				],
				"HealthCheck": {
					"Target": "HTTP:80/",
					"HealthyThreshold": "3",
					"UnhealthyThreshold": "5",
					"Interval": "90",
					"Timeout": "60"
				}
			}
		},
		"ELBAttachment": {
			"Type": "AWS::OpsWorks::ElasticLoadBalancerAttachment",
			"Properties": {
				"ElasticLoadBalancerName": {
					"Ref": "ELB"
				},
				"LayerId": {
					"Ref": "OpsWorksLayer"
				}
			}
		},
		"ELBSecurityGroup": {
			"Type": "AWS::EC2::SecurityGroup",
			"Properties": {
				"GroupDescription": "Allow inbound access to the ELB",
				"VpcId": {
					"Ref": "VPC"
				},
				"SecurityGroupIngress": [
					{
						"IpProtocol": "tcp",
						"FromPort": "80",
						"ToPort": "80",
						"CidrIp": "0.0.0.0/0"
					}
				],
				"SecurityGroupEgress": [
					{
						"IpProtocol": "tcp",
						"FromPort": "80",
						"ToPort": "80",
						"CidrIp": "0.0.0.0/0"
					}
				]
			}
		},
		"VPC": {
			"Type": "AWS::EC2::VPC",
			"DependsOn": "OpsWorksServiceRole",
			"Properties": {
				"CidrBlock": {
					"Fn::FindInMap": [
						"SubnetConfig",
						"VPC",
						"CIDR"
					]
				},
				"Tags": [
					{
						"Key": "Application",
						"Value": {
							"Ref": "AWS::StackName"
						}
					},
					{
						"Key": "Network",
						"Value": "Public"
					}
				]
			}
		},
		"PublicSubnet": {
			"Type": "AWS::EC2::Subnet",
			"Properties": {
				"VpcId": {
					"Ref": "VPC"
				},
				"CidrBlock": {
					"Fn::FindInMap": [
						"SubnetConfig",
						"Public",
						"CIDR"
					]
				},
				"Tags": [
					{
						"Key": "Application",
						"Value": {
							"Ref": "AWS::StackName"
						}
					},
					{
						"Key": "Network",
						"Value": "Public"
					}
				]
			}
		},
		"InternetGateway": {
			"Type": "AWS::EC2::InternetGateway",
			"Properties": {
				"Tags": [
					{
						"Key": "Application",
						"Value": {
							"Ref": "AWS::StackName"
						}
					},
					{
						"Key": "Network",
						"Value": "Public"
					}
				]
			}
		},
		"VPCGatewayAttachment": {
			"Type": "AWS::EC2::VPCGatewayAttachment",
			"Properties": {
				"VpcId": {
					"Ref": "VPC"
				},
				"InternetGatewayId": {
					"Ref": "InternetGateway"
				}
			}
		},
		"PublicRouteTable": {
			"Type": "AWS::EC2::RouteTable",
			"Properties": {
				"VpcId": {
					"Ref": "VPC"
				},
				"Tags": [
					{
						"Key": "Application",
						"Value": {
							"Ref": "AWS::StackName"
						}
					},
					{
						"Key": "Network",
						"Value": "Public"
					}
				]
			}
		},
		"PublicRoute": {
			"Type": "AWS::EC2::Route",
			"DependsOn": "VPCGatewayAttachment",
			"Properties": {
				"RouteTableId": {
					"Ref": "PublicRouteTable"
				},
				"DestinationCidrBlock": "0.0.0.0/0",
				"GatewayId": {
					"Ref": "InternetGateway"
				}
			}
		},
		"PublicSubnetRouteTableAssociation": {
			"Type": "AWS::EC2::SubnetRouteTableAssociation",
			"Properties": {
				"SubnetId": {
					"Ref": "PublicSubnet"
				},
				"RouteTableId": {
					"Ref": "PublicRouteTable"
				}
			}
		},
		"PublicNetworkAcl": {
			"Type": "AWS::EC2::NetworkAcl",
			"Properties": {
				"VpcId": {
					"Ref": "VPC"
				},
				"Tags": [
					{
						"Key": "Application",
						"Value": {
							"Ref": "AWS::StackName"
						}
					},
					{
						"Key": "Network",
						"Value": "Public"
					}
				]
			}
		},
		"InboundHTTPPublicNetworkAclEntry": {
			"Type": "AWS::EC2::NetworkAclEntry",
			"Properties": {
				"NetworkAclId": {
					"Ref": "PublicNetworkAcl"
				},
				"RuleNumber": "100",
				"Protocol": "6",
				"RuleAction": "allow",
				"Egress": "false",
				"CidrBlock": "0.0.0.0/0",
				"PortRange": {
					"From": "80",
					"To": "80"
				}
			}
		},
		"InboundHTTPSPublicNetworkAclEntry": {
			"Type": "AWS::EC2::NetworkAclEntry",
			"Properties": {
				"NetworkAclId": {
					"Ref": "PublicNetworkAcl"
				},
				"RuleNumber": "101",
				"Protocol": "6",
				"RuleAction": "allow",
				"Egress": "false",
				"CidrBlock": "0.0.0.0/0",
				"PortRange": {
					"From": "443",
					"To": "443"
				}
			}
		},
		"InboundSSHPublicNetworkAclEntry": {
			"Type": "AWS::EC2::NetworkAclEntry",
			"Properties": {
				"NetworkAclId": {
					"Ref": "PublicNetworkAcl"
				},
				"RuleNumber": "102",
				"Protocol": "6",
				"RuleAction": "allow",
				"Egress": "false",
				"CidrBlock": "0.0.0.0/0",
				"PortRange": {
					"From": "22",
					"To": "22"
				}
			}
		},
		"InboundEphemeralPublicNetworkAclEntry": {
			"Type": "AWS::EC2::NetworkAclEntry",
			"Properties": {
				"NetworkAclId": {
					"Ref": "PublicNetworkAcl"
				},
				"RuleNumber": "103",
				"Protocol": "6",
				"RuleAction": "allow",
				"Egress": "false",
				"CidrBlock": "0.0.0.0/0",
				"PortRange": {
					"From": "1024",
					"To": "65535"
				}
			}
		},
		"OutboundPublicNetworkAclEntry": {
			"Type": "AWS::EC2::NetworkAclEntry",
			"Properties": {
				"NetworkAclId": {
					"Ref": "PublicNetworkAcl"
				},
				"RuleNumber": "100",
				"Protocol": "6",
				"RuleAction": "allow",
				"Egress": "true",
				"CidrBlock": "0.0.0.0/0",
				"PortRange": {
					"From": "0",
					"To": "65535"
				}
			}
		},
		"PublicSubnetNetworkAclAssociation": {
			"Type": "AWS::EC2::SubnetNetworkAclAssociation",
			"Properties": {
				"SubnetId": {
					"Ref": "PublicSubnet"
				},
				"NetworkAclId": {
					"Ref": "PublicNetworkAcl"
				}
			}
		},
		"PrivateSubnet": {
			"Type": "AWS::EC2::Subnet",
			"Properties": {
				"VpcId": {
					"Ref": "VPC"
				},
				"CidrBlock": {
					"Fn::FindInMap": [
						"SubnetConfig",
						"Private",
						"CIDR"
					]
				},
				"Tags": [
					{
						"Key": "Application",
						"Value": {
							"Ref": "AWS::StackName"
						}
					},
					{
						"Key": "Name",
						"Value": "Private"
					}
				]
			}
		},
		"PrivateRouteTable": {
			"Type": "AWS::EC2::RouteTable",
			"Properties": {
				"VpcId": {
					"Ref": "VPC"
				},
				"Tags": [
					{
						"Key": "Application",
						"Value": {
							"Ref": "AWS::StackName"
						}
					},
					{
						"Key": "Network",
						"Value": "Private"
					}
				]
			}
		},
		"PrivateSubnetRouteTableAssociation": {
			"Type": "AWS::EC2::SubnetRouteTableAssociation",
			"Properties": {
				"SubnetId": {
					"Ref": "PrivateSubnet"
				},
				"RouteTableId": {
					"Ref": "PrivateRouteTable"
				}
			}
		},
		"PrivateRoute": {
			"Type": "AWS::EC2::Route",
			"Properties": {
				"RouteTableId": {
					"Ref": "PrivateRouteTable"
				},
				"DestinationCidrBlock": "0.0.0.0/0",
				"InstanceId": {
					"Ref": "NATDevice"
				}
			}
		},
		"PrivateNetworkAcl": {
			"Type": "AWS::EC2::NetworkAcl",
			"Properties": {
				"VpcId": {
					"Ref": "VPC"
				},
				"Tags": [
					{
						"Key": "Application",
						"Value": {
							"Ref": "AWS::StackName"
						}
					},
					{
						"Key": "Network",
						"Value": "Private"
					}
				]
			}
		},
		"InboundPrivateNetworkAclEntry": {
			"Type": "AWS::EC2::NetworkAclEntry",
			"Properties": {
				"NetworkAclId": {
					"Ref": "PrivateNetworkAcl"
				},
				"RuleNumber": "100",
				"Protocol": "6",
				"RuleAction": "allow",
				"Egress": "false",
				"CidrBlock": "0.0.0.0/0",
				"PortRange": {
					"From": "0",
					"To": "65535"
				}
			}
		},
		"OutBoundPrivateNetworkAclEntry": {
			"Type": "AWS::EC2::NetworkAclEntry",
			"Properties": {
				"NetworkAclId": {
					"Ref": "PrivateNetworkAcl"
				},
				"RuleNumber": "100",
				"Protocol": "6",
				"RuleAction": "allow",
				"Egress": "true",
				"CidrBlock": "0.0.0.0/0",
				"PortRange": {
					"From": "0",
					"To": "65535"
				}
			}
		},
		"PrivateSubnetNetworkAclAssociation": {
			"Type": "AWS::EC2::SubnetNetworkAclAssociation",
			"Properties": {
				"SubnetId": {
					"Ref": "PrivateSubnet"
				},
				"NetworkAclId": {
					"Ref": "PrivateNetworkAcl"
				}
			}
		},
		"NATIPAddress": {
			"Type": "AWS::EC2::EIP",
			"Properties": {
				"Domain": "vpc",
				"InstanceId": {
					"Ref": "NATDevice"
				}
			}
		},
		"NATDevice": {
			"Type": "AWS::EC2::Instance",
			"Properties": {
				"InstanceType": "t2.small",
				"SubnetId": {
					"Ref": "PublicSubnet"
				},
				"SourceDestCheck": "false",
				"ImageId": {
					"Fn::FindInMap": [
						"AWSNATRegionArch2AMI",
						{
							"Ref": "AWS::Region"
						},
						{
							"Fn::FindInMap": [
								"AWSInstanceType2NATArch",
								"t2.small",
								"Arch"
							]
						}
					]
				},
				"SecurityGroupIds": [
					{
						"Ref": "NATSecurityGroup"
					}
				]
			}
		},
		"NATSecurityGroup": {
			"Type": "AWS::EC2::SecurityGroup",
			"Properties": {
				"GroupDescription": "Allow OpsWorks instances to access the NAT Device",
				"VpcId": {
					"Ref": "VPC"
				},
				"SecurityGroupIngress": [
					{
						"IpProtocol": "tcp",
						"FromPort": "80",
						"ToPort": "80",
						"SourceSecurityGroupId": {
							"Ref": "OpsWorksSecurityGroup"
						}
					},
					{
						"IpProtocol": "tcp",
						"FromPort": "9418",
						"ToPort": "9418",
						"SourceSecurityGroupId": {
							"Ref": "OpsWorksSecurityGroup"
						}
					},
					{
						"IpProtocol": "tcp",
						"FromPort": "443",
						"ToPort": "443",
						"SourceSecurityGroupId": {
							"Ref": "OpsWorksSecurityGroup"
						}
					}
				],
				"SecurityGroupEgress": [
					{
						"IpProtocol": "tcp",
						"FromPort": "80",
						"ToPort": "80",
						"CidrIp": "0.0.0.0/0"
					},
					{
						"IpProtocol": "tcp",
						"FromPort": "9418",
						"ToPort": "9418",
						"CidrIp": "0.0.0.0/0"
					},
					{
						"IpProtocol": "tcp",
						"FromPort": "443",
						"ToPort": "443",
						"CidrIp": "0.0.0.0/0"
					}
				]
			}
		}
	},
	"Outputs": {
		"StackId": {
			"Description": "Stack Id of newly created OpsWorks stack",
			"Value": {
				"Ref": "OpsWorksStack"
			}
		},
		"AppId": {
			"Description": "Application Id of newly created OpsWorks application",
			"Value": {
				"Ref": "OpsWorksApp"
			}
		},
		"VPC": {
			"Description": "VPC Id of newly created Virtual Private Cloud",
			"Value": {
				"Ref": "VPC"
			}
		},
		"URL": {
			"Description": "URL for newly created application",
			"Value": {
				"Fn::Join": [
					"",
					[
						"http://",
						{
							"Fn::GetAtt": [
								"ELB",
								"DNSName"
							]
						}
					]
				]
			}
		}
	}
}
